feat: create deleted records api
